# basedplatform

./: .gitignore  CMakeLists.txt  LICENSE  README.md
basedplatform/based/platform/: macros.hpp  util.hpp
basedplatform/based/platform/x86/detail/: cpu_address_features.hpp  cpu_address_info.hpp  cpu_address_limits.hpp  cpu_advanced_features.hpp  cpu_avx10_features.hpp  cpu_cache_features.hpp  cpu_cache_identifiers.hpp  cpu_cache_info.hpp  cpu_cache_meta.hpp  cpu_centaur_features.hpp  cpu_core_crystal_clock_frequency_info.hpp  cpu_core_features.hpp  cpu_descriptors.hpp  cpu_encrypted_memory_asid_info.hpp  cpu_encrypted_memory_features.hpp  cpu_encrypted_memory_info.hpp  cpu_extended_advanced_features.hpp  cpu_extended_advanced_info.hpp  cpu_extended_advanced_instructions.hpp  cpu_extended_compat_features.hpp  cpu_extended_control_features.hpp  cpu_extended_core_features.hpp  cpu_extended_core_info.hpp  cpu_extended_core_instructions.hpp  cpu_extended_feature_identifications.hpp  cpu_extended_intricate_features.hpp  cpu_extended_protection_features.hpp  cpu_extended_timing_features.hpp  cpu_feedback_features.hpp  cpu_hardware_feedback.hpp  cpu_id.hpp  cpu_info.hpp  cpu_key_locker_features.hpp  cpu_manufacturer_id.hpp  cpu_microcode_info.hpp  cpu_monitor_line_info.hpp  cpu_mwait_extensions.hpp  cpu_mwait_features.hpp  cpu_power_management_features.hpp  cpu_power_monitoring_interface_features.hpp  (+31 more)
